Move all IP configuration to IP.Config